--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,10 @@
   "autoPairMarkdown": false,
   "autoPairBrackets": false,
   "useTab": false,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "showUnsupportedFiles": true,
+  "attachmentFolderPath": "(100) Attachments",
+  "userIgnoreFilters": [
+    "(000) System/"
+  ]
 }
