--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "#00940a",
-  "cssTheme": "Shimmering Focus",
+  "cssTheme": "Things",
   "baseFontSize": 19,
   "baseFontSizeAction": true,
   "interfaceFontFamily": "Helvetica",
